RESOLVED FIXED 250984
Nullptr crash accessing font under CSSPropertyParser::parseTypedCustomPropertyValue
https://bugs.webkit.org/show_bug.cgi?id=250984
Summary Nullptr crash accessing font under CSSPropertyParser::parseTypedCustomPropert...
Antti Koivisto
Reported 2023-01-22 10:00:00 PST
<html lang="en"> <style> html { letter-spacing: var(--a); --a: 0ic; } </style> <script> onload = () => { CSS.registerProperty({ inherits: true, name: '--a', syntax: '<length>', initialValue: '0', }); }; </script> </html>
Attachments
Antti Koivisto
Comment 1 2023-01-22 10:00:13 PST
104474407
Antti Koivisto
Comment 2 2023-01-22 10:00:25 PST
Antti Koivisto
Comment 3 2023-01-22 10:40:11 PST
EWS
Comment 4 2023-01-22 12:58:00 PST
Committed 259195@main (3ce91b574a86): <https://commits.webkit.org/259195@main> Reviewed commits have been landed. Closing PR #8955 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.