Nullptr crash accessing font under CSSPropertyParser::parseTypedCustomPropertyValue https://bugs.webkit.org/show_bug.cgi?id=250984 rdar://104474407

Reviewed by Alan Baradlay.

* LayoutTests/fast/css/custom-properties/at-property-dirty-font-crash-expected.txt: Copied from LayoutTests/fast/css/at-property-registration-crash-expected.txt.
* LayoutTests/fast/css/custom-properties/at-property-dirty-font-crash.html: Added.
* LayoutTests/fast/css/custom-properties/at-property-registration-crash-expected.txt: Renamed from LayoutTests/fast/css/at-property-registration-crash-expected.txt.
* LayoutTests/fast/css/custom-properties/at-property-registration-crash.html: Renamed from LayoutTests/fast/css/at-property-registration-crash.html.
* Source/WebCore/style/StyleBuilder.cpp:
(WebCore::Style::Builder::resolveCustomPropertyValueWithVariableReferences):

Update the font before resolving a property if the property is font-dependent.

Canonical link: https://commits.webkit.org/259195@main